<resources>
    <string name="app_name">LinMirror</string>

    <string name="service_label">NotificationListener</string>
    <string name="image_change_explanaton">The Image bellow will change when a Notification is intercepted</string>

    <!-- Placeholder string for if the image doesn't load -->
    <string name="notification_logo">Intercepted Notification Logo</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"LinMirror Service"</string>
    <string name="notification_listener_service_explanation">"For the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_button">Save</string>
    <string name="input_email">Input Email Address</string>
    <string name="pass_prompt">Password</string>
    <string name="email_prompt_hint">example@domain.com</string>
    <string name="pass_prompt_hint">Enter your password</string>
    <string name="login_button">login</string>
    <string name="signup_button_prompt">SignUp!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>

