<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- logo is a placeholder -->
        <ImageView
            android:src="@drawable/lm_logo"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginTop="64dp"
            android:contentDescription="logo"
            android:layout_marginBottom="36dp"
            android:layout_gravity="center_horizontal"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayoutText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_prompt_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayoutText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_prompt_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/common_signin_button_text"/>

        <!--
        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        </com.google.android.gms.common.SignInButton>
        -->

        <Button
            android:id="@+id/signupButton"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_prompt"
            android:textSize="12sp"/>
    </LinearLayout>
</ScrollView>